<resources>
    <string name="app_name">CryptoApp</string>
    <string name="balanceText">0.00</string>
    <string name="welcome_text">Welcome to</string>
    <string name="invalid_price">Invalid Price</string>
    <string name="my_portfolio">My Portfolio</string>
    <string name="my_assets">My Assets</string>

    //Descriptions
    <string name="crypto_image_view">Desc Crypto Image View</string>
    <string name="currency_icon">Desc Currency Icon </string>
    <string name="visibilityicon">Desc visibilityIcon</string>
    <string name="refresh">Desc Refresh</string>
    <string name="desc_account_icon">Desc Account Icon</string>
    <string name="desc_list_icon">Desc List Icon</string>
</resources>