<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.account.AccountFragment"
        android:background="@color/oxfordblue">

        <ImageButton
            android:id="@+id/accountImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/desc_account_icon"
            android:src="@drawable/ic_account"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/timberwolf"
            />

        <ImageButton
            android:id="@+id/listImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/desc_list_icon"
            android:src="@drawable/ic_list"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/timberwolf"
            />

        <TextView
            android:id="@+id/myPortfolioTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/my_portfolio"
            android:textSize="20sp"
            android:fontFamily="@font/amaranth_bold"
            android:textColor="@color/timberwolf"
            app:layout_constraintTop_toTopOf="@id/accountImage"
            app:layout_constraintStart_toEndOf="@id/accountImage"
            app:layout_constraintBottom_toBottomOf="@id/accountImage">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/balanceCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/teal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/currencyIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:tint="@color/timberwolf"
                android:src="@drawable/ic_currency"
                android:contentDescription="@string/currency_icon"
                />

            <TextView
                android:id="@+id/balanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/balanceText"
                android:textColor="@color/timberwolf"
                android:textSize="18sp"
                android:layout_marginStart="30dp" />

            <ImageView
                android:id="@+id/visibilityIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                app:tint="@color/orange"
                android:src="@drawable/ic_eye"
                android:alpha="0.6"
                android:contentDescription="@string/visibilityicon"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/myAssets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/my_assets"
            android:textSize="20sp"
            android:fontFamily="@font/amaranth_bold"
            android:textColor="@color/timberwolf"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/balanceCardView"
            app:layout_constraintStart_toStartOf="@id/accountImage">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>